--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seentask",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -21,7 +21,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "zustand": "^5.0.2",
-    "expo-secure-store": "~14.0.0"
+    "expo-secure-store": "~14.0.0",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
