--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "expo": "~52.0.18",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "4.0.11",
+    "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
@@ -20,9 +22,8 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "zustand": "^5.0.2",
-    "expo-secure-store": "~14.0.0",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
